Añadido un <strong> y un <div>

--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Esto es una cabecera</h1>
-    <p>Los comentarios deben ir fuera de las etiquetas y se representan con los símbolos <!-- para su apertura y --> para su cierre</p>
+    <p><strong>Los comentarios deben ir fuera de las etiquetas</strong> y se representan con los símbolos <!-- para su apertura y --> para su cierre</p>
+
+    <div>Esto es una caja vacia</div>
 </body>
